--- a/adm/style/board_announcements.html
+++ b/adm/style/board_announcements.html
@@ -48,6 +48,14 @@
 		<legend>{L_BOARD_ANNOUNCEMENTS_TEXT}</legend>
 
 		<dl>
+			<dt><label for="board_announcements_enable">{L_BOARD_ANNOUNCEMENTS_GUESTS}{L_COLON}</label></dt>
+			<dd>
+				<label><input type="radio" class="radio" id="board_announcements_guests" name="board_announcements_guests" value="1"<!-- IF BOARD_ANNOUNCEMENTS_GUESTS --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
+				<label><input type="radio" class="radio" name="board_announcements_guests" value="0"<!-- IF not BOARD_ANNOUNCEMENTS_GUESTS --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
+			</dd>
+		</dl>
+
+		<dl>
 			<dt><label for="board_announcements_bgcolor">{L_BOARD_ANNOUNCEMENTS_BGCOLOR}{L_COLON}</label><br /><span>{L_BOARD_ANNOUNCEMENTS_BGCOLOR_EXPLAIN}</span></dt>
 			<dd>
 				<input name="board_announcements_bgcolor" type="text" id="board_announcements_bgcolor" value="{BOARD_ANNOUNCEMENTS_BGCOLOR}" size="6" maxlength="6" />
