Add colpick to background color field

--- a/adm/style/board_announcements.html
+++ b/adm/style/board_announcements.html
@@ -60,7 +60,7 @@
 		<dl>
 			<dt><label for="board_announcements_bgcolor">{L_BOARD_ANNOUNCEMENTS_BGCOLOR}{L_COLON}</label><br /><span>{L_BOARD_ANNOUNCEMENTS_BGCOLOR_EXPLAIN}</span></dt>
 			<dd>
-				<input name="board_announcements_bgcolor" type="text" id="board_announcements_bgcolor" value="{BOARD_ANNOUNCEMENTS_BGCOLOR}" size="6" maxlength="6" />
+				<input name="board_announcements_bgcolor" type="text" id="board_announcements_bgcolor" value="{BOARD_ANNOUNCEMENTS_BGCOLOR}" size="6" maxlength="6" <!-- IF BOARD_ANNOUNCEMENTS_BGCOLOR -->style="border-right:20px solid #{BOARD_ANNOUNCEMENTS_BGCOLOR}"<!-- ENDIF --> />
 			</dd>
 		</dl>
 
