Use div tags instead of P, for BBcode compatibility

--- a/adm/style/board_announcements.html
+++ b/adm/style/board_announcements.html
@@ -40,7 +40,7 @@
 	<!-- IF BOARD_ANNOUNCEMENTS_PREVIEW -->
 		<fieldset>
 			<legend>{L_BOARD_ANNOUNCEMENTS_PREVIEW}</legend>
-			<p style="padding:10px; font-size:1.0em; <!-- IF BOARD_ANNOUNCEMENTS_BGCOLOR -->background-color:#{BOARD_ANNOUNCEMENTS_BGCOLOR}<!-- ENDIF -->">{BOARD_ANNOUNCEMENTS_PREVIEW}</p>
+			<div style="padding:10px; font-size:1.0em; overflow: auto; <!-- IF BOARD_ANNOUNCEMENTS_BGCOLOR -->background-color:#{BOARD_ANNOUNCEMENTS_BGCOLOR}<!-- ENDIF -->">{BOARD_ANNOUNCEMENTS_PREVIEW}</div>
 		</fieldset>
 	<!-- ENDIF -->
 
