Remove implied script type and CDATA tags

--- a/adm/style/board_announcements.html
+++ b/adm/style/board_announcements.html
@@ -1,15 +1,11 @@
 <!-- INCLUDE overall_header.html -->
 
-<script type="text/javascript">
-// <![CDATA[
-
+<script>
 	var form_name = 'acp_board_announcements';
 	var text_name = 'board_announcements_text';
 	var load_draft = false;
 	var upload = false;
 	var imageTag = false;
-
-// ]]>
 </script>
 
 <a id="maincontent"></a>
