--- a/adm/style/event/acp_overall_footer_after.html
+++ b/adm/style/event/acp_overall_footer_after.html
@@ -5,9 +5,7 @@
 	<!-- DEFINE $INCLUDEDED_COLPICKJS = true -->
 <!-- ENDIF -->
 
-<script type="text/javascript">
-// <![CDATA[
-
+<script>
 jQuery(function($) {
 	var bgcolor = '{BOARD_ANNOUNCEMENTS_BGCOLOR}';
 	$('#board_announcements_bgcolor').colpick({
@@ -33,8 +31,6 @@ jQuery(function($) {
 		$(this).colpickSetColor(this.value || 'ffffff');
 	});
 });
-
-// ]]>
 </script>
 
 <!-- ENDIF -->
