Fix spelling nub in define syntax

--- a/adm/style/event/acp_overall_footer_after.html
+++ b/adm/style/event/acp_overall_footer_after.html
@@ -1,8 +1,8 @@
 <!-- IF S_BOARD_ANNOUNCEMENTS -->
 
-<!-- IF not $INCLUDEDED_COLPICKJS -->
+<!-- IF not $INCLUDED_COLPICKJS -->
 	<!-- INCLUDEJS @phpbb_boardannouncements/colpick.js -->
-	<!-- DEFINE $INCLUDEDED_COLPICKJS = true -->
+	<!-- DEFINE $INCLUDED_COLPICKJS = true -->
 <!-- ENDIF -->
 
 <script>
