--- a/adm/style/event/acp_overall_header_head_append.html
+++ b/adm/style/event/acp_overall_header_head_append.html
@@ -1,3 +1,3 @@
 <!-- IF S_BOARD_ANNOUNCEMENTS -->
-	<!-- INCLUDECSS colpick.css -->
+	<!-- INCLUDECSS @phpbb_boardannouncements/colpick.css -->
 <!-- ENDIF -->
