--- a/adm/style/board_announcements.html
+++ b/adm/style/board_announcements.html
@@ -32,17 +32,16 @@
 			</dd>
 		</dl>
 		<dl>
-			<dt><label for="board_announcements_guests">{L_BOARD_ANNOUNCEMENTS_GUESTS}{L_COLON}</label></dt>
-			<dd>
-				<label><input type="radio" class="radio" id="board_announcements_guests" name="board_announcements_guests" value="1"<!-- IF BOARD_ANNOUNCEMENTS_GUESTS --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
-				<label><input type="radio" class="radio" name="board_announcements_guests" value="0"<!-- IF not BOARD_ANNOUNCEMENTS_GUESTS --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
-			</dd>
-		</dl>
-		<dl>
 			<dt><label for="board_announcements_dismiss">{L_BOARD_ANNOUNCEMENTS_DISMISS}{L_COLON}</label></dt>
 			<dd>
 				<label><input type="radio" class="radio" id="board_announcements_dismiss" name="board_announcements_dismiss" value="1"<!-- IF BOARD_ANNOUNCEMENTS_DISMISS --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
 				<label><input type="radio" class="radio" name="board_announcements_dismiss" value="0"<!-- IF not BOARD_ANNOUNCEMENTS_DISMISS --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
+			</dd>
+		</dl>
+		<dl>
+			<dt><label for="board_announcements_users">{L_BOARD_ANNOUNCEMENTS_USERS}{L_COLON}</label></dt>
+			<dd>
+				<select name="board_announcements_users">{S_BOARD_ANNOUNCEMENTS_USERS}</select>
 			</dd>
 		</dl>
 	</fieldset>
