--- a/adm/style/event/acp_overall_footer_after.html
+++ b/adm/style/event/acp_overall_footer_after.html
@@ -2,6 +2,7 @@
 
 <!-- IF not $INCLUDED_COLPICKJS -->
 	<!-- INCLUDEJS @phpbb_boardannouncements/colpick.js -->
+	<!-- INCLUDECSS @phpbb_boardannouncements/colpick.css -->
 	<!-- DEFINE $INCLUDED_COLPICKJS = true -->
 <!-- ENDIF -->
 
