Add announcement expiration support

--- a/adm/style/board_announcements.html
+++ b/adm/style/board_announcements.html
@@ -56,6 +56,12 @@
 	<fieldset>
 		<legend>{L_BOARD_ANNOUNCEMENTS_TEXT}</legend>
 		<dl>
+			<dt><label for="board_announcements_expiry">{L_BOARD_ANNOUNCEMENTS_EXPIRY}{L_COLON}</label><br /><span>{L_BOARD_ANNOUNCEMENTS_EXPIRY_EXPLAIN}</span></dt>
+			<dd>
+				<input name="board_announcements_expiry" type="text" id="board_announcements_expiry" value="{BOARD_ANNOUNCEMENTS_EXPIRY}" size="20" maxlength="20" /> <samp>{L_BOARD_ANNOUNCEMENTS_EXPIRY_FORMAT}</samp>
+			</dd>
+		</dl>
+		<dl>
 			<dt><label for="board_announcements_bgcolor">{L_BOARD_ANNOUNCEMENTS_BGCOLOR}{L_COLON}</label><br /><span>{L_BOARD_ANNOUNCEMENTS_BGCOLOR_EXPLAIN}</span></dt>
 			<dd>
 				<input name="board_announcements_bgcolor" type="text" id="board_announcements_bgcolor" value="{BOARD_ANNOUNCEMENTS_BGCOLOR}" size="6" maxlength="6" <!-- IF BOARD_ANNOUNCEMENTS_BGCOLOR -->style="border-right:20px solid #{BOARD_ANNOUNCEMENTS_BGCOLOR}"<!-- ENDIF --> />
