Board announcements on index only option

--- a/adm/style/board_announcements.html
+++ b/adm/style/board_announcements.html
@@ -32,6 +32,13 @@
 			</dd>
 		</dl>
 		<dl>
+			<dt><label for="board_announcements_index_only">{L_BOARD_ANNOUNCEMENTS_INDEX_ONLY}{L_COLON}</label></dt>
+			<dd>
+				<label><input type="radio" class="radio" id="board_announcements_index_only" name="board_announcements_index_only" value="1"<!-- IF BOARD_ANNOUNCEMENTS_INDEX_ONLY --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
+				<label><input type="radio" class="radio" name="board_announcements_index_only" value="0"<!-- IF not BOARD_ANNOUNCEMENTS_INDEX_ONLY --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
+			</dd>
+		</dl>
+		<dl>
 			<dt><label for="board_announcements_dismiss">{L_BOARD_ANNOUNCEMENTS_DISMISS}{L_COLON}</label></dt>
 			<dd>
 				<label><input type="radio" class="radio" id="board_announcements_dismiss" name="board_announcements_dismiss" value="1"<!-- IF BOARD_ANNOUNCEMENTS_DISMISS --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
