--- a/adm/style/board_announcements.html
+++ b/adm/style/board_announcements.html
@@ -80,7 +80,7 @@
 		{% include 'acp_posting_buttons.html' %}
 
 		<dl class="responsive-columns">
-			<dt style="width: 90px;" id="color_palette_placeholder" data-orientation="v" data-height="12" data-width="15" data-bbcode="true"></dt>
+			<dt style="width: 90px;" id="color_palette_placeholder" data-orientation="v" data-color-palette="v" data-height="12" data-width="15" data-bbcode="true"></dt>
 			<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px;">
 				<textarea name="board_announcements_text" rows="10" cols="60" style="width: 95%;" onselect="storeCaret(this);" onclick="storeCaret(this);" onkeyup="storeCaret(this);" onfocus="initInsertions();" data-bbcode="true">{{ BOARD_ANNOUNCEMENTS_TEXT }}</textarea>
 			</dd>
