--- a/adm/style/board_announcements.html
+++ b/adm/style/board_announcements.html
@@ -82,7 +82,7 @@
 		<dl class="responsive-columns">
 			<dt style="width: 90px;" id="color_palette_placeholder" data-orientation="v" data-color-palette="v" data-height="12" data-width="15" data-bbcode="true"></dt>
 			<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px;">
-				<textarea name="board_announcements_text" rows="10" cols="60" style="width: 95%;" onselect="storeCaret(this);" onclick="storeCaret(this);" onkeyup="storeCaret(this);" onfocus="initInsertions();" data-bbcode="true">{{ BOARD_ANNOUNCEMENTS_TEXT }}</textarea>
+				<textarea name="board_announcements_text" rows="10" cols="60" style="width: 95%;" data-bbcode="true">{{ BOARD_ANNOUNCEMENTS_TEXT }}</textarea>
 			</dd>
 			<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px; margin-top: 5px;">
 				{% if S_BBCODE_ALLOWED %}
@@ -105,5 +105,13 @@
 		{{ S_FORM_TOKEN }}
 	</fieldset>
 </form>
+
+<script>
+	const textarea = document.querySelector("textarea[name='board_announcements_text']");
+	textarea.addEventListener("select", (e) => storeCaret(e.target));
+	textarea.addEventListener("click", (e) => storeCaret(e.target));
+	textarea.addEventListener("keyup", (e) => storeCaret(e.target));
+	textarea.addEventListener("focus", () => initInsertions());
+</script>
 
 {% include 'overall_footer.html' %}
