--- a/adm/style/board_announcements.html
+++ b/adm/style/board_announcements.html
@@ -135,6 +135,24 @@
 
 {% else %}
 
+	<form id="acp_board_announcement_settings" method="post" action="{{ U_ACTION }}" data-ajax="true">
+		<fieldset>
+			<legend>{{ lang('GENERAL_OPTIONS') }}</legend>
+			<dl>
+				<dt><label for="board_announcements_enable_all">{{ lang('BOARD_ANNOUNCEMENTS_ENABLE_ALL') ~ lang('COLON') }}</label></dt>
+				<dd>
+					<label><input type="radio" class="radio" id="board_announcements_enable_all" name="board_announcements_enable_all" value="1"{% if BOARD_ANNOUNCEMENTS_ENABLED_ALL %} checked="checked"{% endif %} /> {{ lang('YES') }}</label>
+					<label><input type="radio" class="radio" name="board_announcements_enable_all" value="0"{% if not BOARD_ANNOUNCEMENTS_ENABLED_ALL %} checked="checked"{% endif %} /> {{ lang('NO') }}</label>
+				</dd>
+			</dl>
+			<p class="quick">
+				<input type="submit" id="board_announcements_enable_all_submit" name="board_announcements_enable_all_submit" class="button2" value="{L_SUBMIT}">
+				<input type="hidden" name="action" value="settings" />
+			</p>
+			{S_FORM_TOKEN}
+		</fieldset>
+	</form>
+
 	<table class="table1 zebra-table fixed-width-table">
 		<thead>
 		<tr>
@@ -165,7 +183,13 @@
 					<td>{{ ba.S_ENABLED ? _self.iconyes() : _self.iconno() }}</td>
 					<td>{{ ba.EXPIRY_DATE ? ba.EXPIRY_DATE|date("Y-m-d") : '' }}</td>
 					<td>{{ ba.S_EXPIRED ? lang('YES') : lang('NO') }}</td>
-					<td class="actions"><a href="{{ ba.U_EDIT }}">{{ ICON_EDIT }}</a> <a href="{{ ba.U_DELETE }}" data-ajax="row_delete">{{ ICON_DELETE }}</a></td>
+					<td class="actions">
+						<span class="up-disabled" style="display:none;">{{ ICON_MOVE_UP_DISABLED }}</span>
+						<span class="up"><a href="{{ ba.U_MOVE_UP }}" data-ajax="row_up">{{ ICON_MOVE_UP }}</a></span>
+						<span class="down-disabled" style="display:none;">{{ ICON_MOVE_DOWN_DISABLED }}</span>
+						<span class="down"><a href="{{ ba.U_MOVE_DOWN }}" data-ajax="row_down">{{ ICON_MOVE_DOWN }}</a></span>
+						<a href="{{ ba.U_EDIT }}">{{ ICON_EDIT }}</a> <a href="{{ ba.U_DELETE }}" data-ajax="row_delete">{{ ICON_DELETE }}</a>
+					</td>
 				</tr>
 			{% else %}
 				<tr>
