--- a/adm/style/board_announcements.html
+++ b/adm/style/board_announcements.html
@@ -40,22 +40,22 @@
 			<dl>
 				<dt><label for="board_announcements_enable">{{ lang('BOARD_ANNOUNCEMENTS_ENABLE') ~ lang('COLON') }}</label></dt>
 				<dd>
-					<label><input type="radio" class="radio" id="board_announcements_enable" name="board_announcements_enable" value="1"{% if BOARD_ANNOUNCEMENTS_ENABLED %} checked="checked"{% endif %} /> {{ lang('YES') }}</label>
-					<label><input type="radio" class="radio" name="board_announcements_enable" value="0"{% if not BOARD_ANNOUNCEMENTS_ENABLED %} checked="checked"{% endif %} /> {{ lang('NO') }}</label>
+					<label><input type="radio" class="radio" id="board_announcements_enable" name="board_announcements_enable" value="1"{% if BOARD_ANNOUNCEMENTS_ENABLED %} checked="checked"{% endif %}> {{ lang('YES') }}</label>
+					<label><input type="radio" class="radio" name="board_announcements_enable" value="0"{% if not BOARD_ANNOUNCEMENTS_ENABLED %} checked="checked"{% endif %}> {{ lang('NO') }}</label>
 				</dd>
 			</dl>
 			<dl>
 				<dt><label for="board_announcements_index_only">{{ lang('BOARD_ANNOUNCEMENTS_INDEX_ONLY') ~ lang('COLON') }}</label></dt>
 				<dd>
-					<label><input type="radio" class="radio" id="board_announcements_index_only" name="board_announcements_index_only" value="1"{% if BOARD_ANNOUNCEMENTS_INDEX_ONLY %} checked="checked"{% endif %} /> {{ lang('YES') }}</label>
-					<label><input type="radio" class="radio" name="board_announcements_index_only" value="0"{% if not BOARD_ANNOUNCEMENTS_INDEX_ONLY %} checked="checked"{% endif %} /> {{ lang('NO') }}</label>
+					<label><input type="radio" class="radio" id="board_announcements_index_only" name="board_announcements_index_only" value="1"{% if BOARD_ANNOUNCEMENTS_INDEX_ONLY %} checked="checked"{% endif %}> {{ lang('YES') }}</label>
+					<label><input type="radio" class="radio" name="board_announcements_index_only" value="0"{% if not BOARD_ANNOUNCEMENTS_INDEX_ONLY %} checked="checked"{% endif %}> {{ lang('NO') }}</label>
 				</dd>
 			</dl>
 			<dl>
 				<dt><label for="board_announcements_dismiss">{{ lang('BOARD_ANNOUNCEMENTS_DISMISS') ~ lang('COLON') }}</label></dt>
 				<dd>
-					<label><input type="radio" class="radio" id="board_announcements_dismiss" name="board_announcements_dismiss" value="1"{% if BOARD_ANNOUNCEMENTS_DISMISS %} checked="checked"{% endif %} /> {{ lang('YES') }}</label>
-					<label><input type="radio" class="radio" name="board_announcements_dismiss" value="0"{% if not BOARD_ANNOUNCEMENTS_DISMISS %} checked="checked"{% endif %} /> {{ lang('NO') }}</label>
+					<label><input type="radio" class="radio" id="board_announcements_dismiss" name="board_announcements_dismiss" value="1"{% if BOARD_ANNOUNCEMENTS_DISMISS %} checked="checked"{% endif %}> {{ lang('YES') }}</label>
+					<label><input type="radio" class="radio" name="board_announcements_dismiss" value="0"{% if not BOARD_ANNOUNCEMENTS_DISMISS %} checked="checked"{% endif %}> {{ lang('NO') }}</label>
 				</dd>
 			</dl>
 			<dl>
@@ -76,25 +76,25 @@
 		<fieldset>
 			<legend>{{ lang('BOARD_ANNOUNCEMENTS_TEXT') }}</legend>
 			<dl>
-				<dt><label for="board_announcements_description">{{ lang('BOARD_ANNOUNCEMENTS_DESC') ~ lang('COLON') }}</label><br /><span>{{ lang('BOARD_ANNOUNCEMENTS_DESC_EXPLAIN') }}</span></dt>
+				<dt><label for="board_announcements_description">{{ lang('BOARD_ANNOUNCEMENTS_DESC') ~ lang('COLON') }}</label><br><span>{{ lang('BOARD_ANNOUNCEMENTS_DESC_EXPLAIN') }}</span></dt>
 				<dd>
 					<input name="board_announcements_description" type="text" id="board_announcements_description" maxlength="200" value="{{ BOARD_ANNOUNCEMENTS_DESC }}">
 				</dd>
 			</dl>
 			<dl>
-				<dt><label for="board_announcements_expiry">{{ lang('BOARD_ANNOUNCEMENTS_EXPIRY') ~ lang('COLON') }}</label><br /><span>{{ lang('BOARD_ANNOUNCEMENTS_EXPIRY_EXPLAIN') }}</span></dt>
+				<dt><label for="board_announcements_expiry">{{ lang('BOARD_ANNOUNCEMENTS_EXPIRY') ~ lang('COLON') }}</label><br><span>{{ lang('BOARD_ANNOUNCEMENTS_EXPIRY_EXPLAIN') }}</span></dt>
 				<dd>
 					<input name="board_announcements_expiry" type="text" id="board_announcements_expiry" value="{{ BOARD_ANNOUNCEMENTS_EXPIRY }}" size="20" maxlength="20"> <samp>{{ lang('BOARD_ANNOUNCEMENTS_EXPIRY_FORMAT') }}</samp>
 				</dd>
 			</dl>
 			<dl>
-				<dt><label for="board_announcements_bgcolor">{{ lang('BOARD_ANNOUNCEMENTS_BGCOLOR') ~ lang('COLON') }}</label><br /><span>{{ lang('BOARD_ANNOUNCEMENTS_BGCOLOR_EXPLAIN') }}</span></dt>
+				<dt><label for="board_announcements_bgcolor">{{ lang('BOARD_ANNOUNCEMENTS_BGCOLOR') ~ lang('COLON') }}</label><br><span>{{ lang('BOARD_ANNOUNCEMENTS_BGCOLOR_EXPLAIN') }}</span></dt>
 				<dd>
-					<input name="board_announcements_bgcolor" type="text" id="board_announcements_bgcolor" value="{{ BOARD_ANNOUNCEMENTS_BGCOLOR }}" size="6" maxlength="6" {% if BOARD_ANNOUNCEMENTS_BGCOLOR %}style="border-right:20px solid #{{ BOARD_ANNOUNCEMENTS_BGCOLOR }}"{% endif %} />
+					<input name="board_announcements_bgcolor" type="text" id="board_announcements_bgcolor" value="{{ BOARD_ANNOUNCEMENTS_BGCOLOR }}" size="6" maxlength="6" {% if BOARD_ANNOUNCEMENTS_BGCOLOR %}style="border-right:20px solid #{{ BOARD_ANNOUNCEMENTS_BGCOLOR }}"{% endif %}>
 				</dd>
 			</dl>
 
-			<br />
+			<br>
 
 			{% include 'acp_posting_buttons.html' %}
 
@@ -105,13 +105,13 @@
 				</dd>
 				<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px; margin-top: 5px;">
 					{% if S_BBCODE_ALLOWED %}
-						<label><input type="checkbox" class="radio" name="disable_bbcode"{% if S_BBCODE_DISABLE_CHECKED %} checked="checked"{% endif %} /> {{ lang('DISABLE_BBCODE') }}</label>
+						<label><input type="checkbox" class="radio" name="disable_bbcode"{% if S_BBCODE_DISABLE_CHECKED %} checked="checked"{% endif %}> {{ lang('DISABLE_BBCODE') }}</label>
 					{% endif %}
 					{% if S_SMILIES_ALLOWED %}
-						<label><input type="checkbox" class="radio" name="disable_smilies"{% if S_SMILIES_DISABLE_CHECKED %} checked="checked"{% endif %} /> {{ lang('DISABLE_SMILIES') }}</label>
+						<label><input type="checkbox" class="radio" name="disable_smilies"{% if S_SMILIES_DISABLE_CHECKED %} checked="checked"{% endif %}> {{ lang('DISABLE_SMILIES') }}</label>
 					{% endif %}
 					{% if S_LINKS_ALLOWED %}
-						<label><input type="checkbox" class="radio" name="disable_magic_url"{% if S_MAGIC_URL_DISABLE_CHECKED %} checked="checked"{% endif %} /> {{ lang('DISABLE_MAGIC_URL') }}</label>
+						<label><input type="checkbox" class="radio" name="disable_magic_url"{% if S_MAGIC_URL_DISABLE_CHECKED %} checked="checked"{% endif %}> {{ lang('DISABLE_MAGIC_URL') }}</label>
 					{% endif %}
 				</dd>
 				<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px; margin-top: 10px;"><strong>{{ lang('OPTIONS') ~ lang('COLON') }} </strong>{{ BBCODE_STATUS }} :: {{ IMG_STATUS }} :: {{ FLASH_STATUS }} :: {{ URL_STATUS }} :: {{ SMILIES_STATUS }}</dd>
@@ -119,8 +119,8 @@
 		</fieldset>
 
 		<fieldset class="submit-buttons">
-			<input class="button1" type="submit" id="submit" name="submit" value="{{ lang('SUBMIT') }}" />&nbsp;
-			<input class="button2" type="submit" name="preview" value="{{ lang('PREVIEW') }}" />
+			<input class="button1" type="submit" id="submit" name="submit" value="{{ lang('SUBMIT') }}">&nbsp;
+			<input class="button2" type="submit" name="preview" value="{{ lang('PREVIEW') }}">
 			{{ S_FORM_TOKEN }}
 		</fieldset>
 	</form>
@@ -141,13 +141,13 @@
 			<dl>
 				<dt><label for="board_announcements_enable_all">{{ lang('BOARD_ANNOUNCEMENTS_ENABLE_ALL') ~ lang('COLON') }}</label></dt>
 				<dd>
-					<label><input type="radio" class="radio" id="board_announcements_enable_all" name="board_announcements_enable_all" value="1"{% if BOARD_ANNOUNCEMENTS_ENABLED_ALL %} checked="checked"{% endif %} /> {{ lang('YES') }}</label>
-					<label><input type="radio" class="radio" name="board_announcements_enable_all" value="0"{% if not BOARD_ANNOUNCEMENTS_ENABLED_ALL %} checked="checked"{% endif %} /> {{ lang('NO') }}</label>
+					<label><input type="radio" class="radio" id="board_announcements_enable_all" name="board_announcements_enable_all" value="1"{% if BOARD_ANNOUNCEMENTS_ENABLED_ALL %} checked="checked"{% endif %}> {{ lang('YES') }}</label>
+					<label><input type="radio" class="radio" name="board_announcements_enable_all" value="0"{% if not BOARD_ANNOUNCEMENTS_ENABLED_ALL %} checked="checked"{% endif %}> {{ lang('NO') }}</label>
 				</dd>
 			</dl>
 			<p class="quick">
 				<input type="submit" id="board_announcements_enable_all_submit" name="board_announcements_enable_all_submit" class="button2" value="{L_SUBMIT}">
-				<input type="hidden" name="action" value="settings" />
+				<input type="hidden" name="action" value="settings">
 			</p>
 			{S_FORM_TOKEN}
 		</fieldset>
@@ -201,7 +201,7 @@
 
 	<form id="acp_phpbb_ba_quick_add" method="post" action="{{ U_ACTION_ADD }}">
 		<fieldset class="quick">
-			<input class="button2" type="submit" value="{{ lang('BOARD_ANNOUNCEMENTS_ADD') }}" />
+			<input class="button2" type="submit" value="{{ lang('BOARD_ANNOUNCEMENTS_ADD') }}">
 			{{ S_FORM_TOKEN }}
 		</fieldset>
 	</form>
