Split up acp template files
Signed-off-by: Matt Friedman <maf675@gmail.com>

--- a/adm/style/board_announcements.html
+++ b/adm/style/board_announcements.html
@@ -1,211 +1,11 @@
-{% macro iconyes() %}
-	<i class="icon acp-icon acp-icon-settings fa-check fa-fw" title="{{ lang('YES') }}"></i>
-{% endmacro %}
-{% macro iconno() %}
-	<i class="icon acp-icon acp-icon-delete fa-times fa-fw" title="{{ lang('NO') }}"></i>
-{% endmacro %}
-
 {% include 'overall_header.html' %}
 
 <a id="maincontent"></a>
 
 {% if S_ADD or S_EDIT %}
-	<a href="{{ U_BACK }}" style="float: {{ S_CONTENT_FLOW_END }};">&laquo; {{ lang('BACK') }}</a>
-{% endif %}
-
-<h1>{{ lang('BOARD_ANNOUNCEMENTS_SETTINGS') }}</h1>
-
-<p>{{ lang('BOARD_ANNOUNCEMENTS_SETTINGS_EXPLAIN') }}</p>
-
-{% if S_ADD or S_EDIT %}
-
-	<script>
-		var form_name = 'acp_board_announcements';
-		var text_name = 'board_announcements_text';
-		var load_draft = false;
-		var upload = false;
-		var imageTag = false;
-	</script>
-
-	{% if ERRORS %}
-		<div class="errorbox">
-			<h3>{{ lang('WARNING') }}</h3>
-			<p>{{ ERRORS }}</p>
-		</div>
-	{% endif %}
-
-	<form id="acp_board_announcements" method="post" action="{{ U_ACTION }}">
-		<fieldset>
-			<legend>{{ lang('BOARD_ANNOUNCEMENTS_OPTIONS') }}</legend>
-			<dl>
-				<dt><label for="board_announcements_enable">{{ lang('BOARD_ANNOUNCEMENTS_ENABLE') ~ lang('COLON') }}</label></dt>
-				<dd>
-					<label><input type="radio" class="radio" id="board_announcements_enable" name="board_announcements_enable" value="1"{% if BOARD_ANNOUNCEMENTS_ENABLED %} checked="checked"{% endif %}> {{ lang('YES') }}</label>
-					<label><input type="radio" class="radio" name="board_announcements_enable" value="0"{% if not BOARD_ANNOUNCEMENTS_ENABLED %} checked="checked"{% endif %}> {{ lang('NO') }}</label>
-				</dd>
-			</dl>
-			<dl>
-				<dt><label for="board_announcements_index_only">{{ lang('BOARD_ANNOUNCEMENTS_INDEX_ONLY') ~ lang('COLON') }}</label></dt>
-				<dd>
-					<label><input type="radio" class="radio" id="board_announcements_index_only" name="board_announcements_index_only" value="1"{% if BOARD_ANNOUNCEMENTS_INDEX_ONLY %} checked="checked"{% endif %}> {{ lang('YES') }}</label>
-					<label><input type="radio" class="radio" name="board_announcements_index_only" value="0"{% if not BOARD_ANNOUNCEMENTS_INDEX_ONLY %} checked="checked"{% endif %}> {{ lang('NO') }}</label>
-				</dd>
-			</dl>
-			<dl>
-				<dt><label for="board_announcements_dismiss">{{ lang('BOARD_ANNOUNCEMENTS_DISMISS') ~ lang('COLON') }}</label></dt>
-				<dd>
-					<label><input type="radio" class="radio" id="board_announcements_dismiss" name="board_announcements_dismiss" value="1"{% if BOARD_ANNOUNCEMENTS_DISMISS %} checked="checked"{% endif %}> {{ lang('YES') }}</label>
-					<label><input type="radio" class="radio" name="board_announcements_dismiss" value="0"{% if not BOARD_ANNOUNCEMENTS_DISMISS %} checked="checked"{% endif %}> {{ lang('NO') }}</label>
-				</dd>
-			</dl>
-			<dl>
-				<dt><label for="board_announcements_users">{{ lang('BOARD_ANNOUNCEMENTS_USERS') ~ lang('COLON') }}</label></dt>
-				<dd>
-					<select name="board_announcements_users" id="board_announcements_users">{{ S_BOARD_ANNOUNCEMENTS_USERS }}</select>
-				</dd>
-			</dl>
-		</fieldset>
-
-		{% if BOARD_ANNOUNCEMENTS_PREVIEW %}
-			<fieldset>
-				<legend>{{ lang('BOARD_ANNOUNCEMENTS_PREVIEW') }}</legend>
-				<div style="padding:10px; font-size:1.0em; overflow: auto; {% if BOARD_ANNOUNCEMENTS_BGCOLOR %}background-color:#{{ BOARD_ANNOUNCEMENTS_BGCOLOR }}{% endif %}">{{ BOARD_ANNOUNCEMENTS_PREVIEW }}</div>
-			</fieldset>
-		{% endif %}
-
-		<fieldset>
-			<legend>{{ lang('BOARD_ANNOUNCEMENTS_TEXT') }}</legend>
-			<dl>
-				<dt><label for="board_announcements_description">{{ lang('BOARD_ANNOUNCEMENTS_DESC') ~ lang('COLON') }}</label><br><span>{{ lang('BOARD_ANNOUNCEMENTS_DESC_EXPLAIN') }}</span></dt>
-				<dd>
-					<input name="board_announcements_description" type="text" id="board_announcements_description" maxlength="200" value="{{ BOARD_ANNOUNCEMENTS_DESC }}">
-				</dd>
-			</dl>
-			<dl>
-				<dt><label for="board_announcements_expiry">{{ lang('BOARD_ANNOUNCEMENTS_EXPIRY') ~ lang('COLON') }}</label><br><span>{{ lang('BOARD_ANNOUNCEMENTS_EXPIRY_EXPLAIN') }}</span></dt>
-				<dd>
-					<input name="board_announcements_expiry" type="text" id="board_announcements_expiry" value="{{ BOARD_ANNOUNCEMENTS_EXPIRY }}" size="20" maxlength="20"> <samp>{{ lang('BOARD_ANNOUNCEMENTS_EXPIRY_FORMAT') }}</samp>
-				</dd>
-			</dl>
-			<dl>
-				<dt><label for="board_announcements_bgcolor">{{ lang('BOARD_ANNOUNCEMENTS_BGCOLOR') ~ lang('COLON') }}</label><br><span>{{ lang('BOARD_ANNOUNCEMENTS_BGCOLOR_EXPLAIN') }}</span></dt>
-				<dd>
-					<input name="board_announcements_bgcolor" type="text" id="board_announcements_bgcolor" value="{{ BOARD_ANNOUNCEMENTS_BGCOLOR }}" size="6" maxlength="6" {% if BOARD_ANNOUNCEMENTS_BGCOLOR %}style="border-right:20px solid #{{ BOARD_ANNOUNCEMENTS_BGCOLOR }}"{% endif %}>
-				</dd>
-			</dl>
-
-			<br>
-
-			{% include 'acp_posting_buttons.html' %}
-
-			<dl class="responsive-columns">
-				<dt style="width: 90px;" id="color_palette_placeholder" data-orientation="v" data-color-palette="v" data-height="12" data-width="15" data-bbcode="true"></dt>
-				<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px;">
-					<textarea name="board_announcements_text" rows="10" cols="60" style="width: 95%;" data-bbcode="true">{{ BOARD_ANNOUNCEMENTS_TEXT }}</textarea>
-				</dd>
-				<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px; margin-top: 5px;">
-					{% if S_BBCODE_ALLOWED %}
-						<label><input type="checkbox" class="radio" name="disable_bbcode"{% if S_BBCODE_DISABLE_CHECKED %} checked="checked"{% endif %}> {{ lang('DISABLE_BBCODE') }}</label>
-					{% endif %}
-					{% if S_SMILIES_ALLOWED %}
-						<label><input type="checkbox" class="radio" name="disable_smilies"{% if S_SMILIES_DISABLE_CHECKED %} checked="checked"{% endif %}> {{ lang('DISABLE_SMILIES') }}</label>
-					{% endif %}
-					{% if S_LINKS_ALLOWED %}
-						<label><input type="checkbox" class="radio" name="disable_magic_url"{% if S_MAGIC_URL_DISABLE_CHECKED %} checked="checked"{% endif %}> {{ lang('DISABLE_MAGIC_URL') }}</label>
-					{% endif %}
-				</dd>
-				<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px; margin-top: 10px;"><strong>{{ lang('OPTIONS') ~ lang('COLON') }} </strong>{{ BBCODE_STATUS }} :: {{ IMG_STATUS }} :: {{ FLASH_STATUS }} :: {{ URL_STATUS }} :: {{ SMILIES_STATUS }}</dd>
-			</dl>
-		</fieldset>
-
-		<fieldset class="submit-buttons">
-			<input class="button1" type="submit" id="submit" name="submit" value="{{ lang('SUBMIT') }}">&nbsp;
-			<input class="button2" type="submit" name="preview" value="{{ lang('PREVIEW') }}">
-			{{ S_FORM_TOKEN }}
-		</fieldset>
-	</form>
-
-	<script>
-		const textarea = document.querySelector("textarea[name='board_announcements_text']");
-		textarea.addEventListener("select", (e) => storeCaret(e.target));
-		textarea.addEventListener("click", (e) => storeCaret(e.target));
-		textarea.addEventListener("keyup", (e) => storeCaret(e.target));
-		textarea.addEventListener("focus", () => initInsertions());
-	</script>
-
+	{% include '@phpbb_boardannouncements/settings_add_edit.html' %}
 {% else %}
-
-	<form id="acp_board_announcement_settings" method="post" action="{{ U_ACTION }}" data-ajax="true">
-		<fieldset>
-			<legend>{{ lang('GENERAL_OPTIONS') }}</legend>
-			<dl>
-				<dt><label for="board_announcements_enable_all">{{ lang('BOARD_ANNOUNCEMENTS_ENABLE_ALL') ~ lang('COLON') }}</label></dt>
-				<dd>
-					<label><input type="radio" class="radio" id="board_announcements_enable_all" name="board_announcements_enable_all" value="1"{% if BOARD_ANNOUNCEMENTS_ENABLED_ALL %} checked="checked"{% endif %}> {{ lang('YES') }}</label>
-					<label><input type="radio" class="radio" name="board_announcements_enable_all" value="0"{% if not BOARD_ANNOUNCEMENTS_ENABLED_ALL %} checked="checked"{% endif %}> {{ lang('NO') }}</label>
-				</dd>
-			</dl>
-			<p class="quick">
-				<input type="submit" id="board_announcements_enable_all_submit" name="board_announcements_enable_all_submit" class="button2" value="{L_SUBMIT}">
-				<input type="hidden" name="action" value="settings">
-			</p>
-			{S_FORM_TOKEN}
-		</fieldset>
-	</form>
-
-	<table class="table1 zebra-table fixed-width-table">
-		<thead>
-		<tr>
-			<th>{{ lang('BOARD_ANNOUNCEMENTS_TH_DESCRIPTION') }}</th>
-			<th>{{ lang('BOARD_ANNOUNCEMENTS_TH_SHOW_WHERE') }}</th>
-			<th>{{ lang('BOARD_ANNOUNCEMENTS_TH_SHOW_TO') }}</th>
-			<th>{{ lang('BOARD_ANNOUNCEMENTS_TH_CREATED_DATE') }}</th>
-			<th>{{ lang('BOARD_ANNOUNCEMENTS_TH_ENABLED') }}</th>
-			<th>{{ lang('BOARD_ANNOUNCEMENTS_TH_EXPIRY_DATE') }}</th>
-			<th>{{ lang('BOARD_ANNOUNCEMENTS_TH_EXPIRED') }}</th>
-			<th>{{ lang('ACTION') }}</th>
-		</tr>
-		</thead>
-		<tbody>
-			{% for ba in announcements %}
-				<tr>
-					<td>{{ ba.DESCRIPTION }}</td>
-					<td>{{ ba.INDEX_ONLY ? lang('INDEX_ONLY') : lang('EVERYWHERE') }}</td>
-					<td>{% if ba.USERS == constant('\\phpbb\\boardannouncements\\ext::ALL') %}
-							{{ lang('BOARD_ANNOUNCEMENTS_EVERYONE') }}
-						{% elseif ba.USERS == constant('\\phpbb\\boardannouncements\\ext::MEMBERS') %}
-							{{ lang('G_REGISTERED') }}
-						{% elseif ba.USERS == constant('\\phpbb\\boardannouncements\\ext::GUESTS') %}
-							{{ lang('G_GUESTS') }}
-						{% endif %}
-					</td>
-					<td>{{ ba.CREATED_DATE ? ba.CREATED_DATE|date("Y-m-d") : '' }}</td>
-					<td>{{ ba.S_ENABLED ? _self.iconyes() : _self.iconno() }}</td>
-					<td>{{ ba.EXPIRY_DATE ? ba.EXPIRY_DATE|date("Y-m-d") : '' }}</td>
-					<td>{{ ba.S_EXPIRED ? lang('YES') : lang('NO') }}</td>
-					<td class="actions">
-						<span class="up-disabled" style="display:none;">{{ ICON_MOVE_UP_DISABLED }}</span>
-						<span class="up"><a href="{{ ba.U_MOVE_UP }}" data-ajax="row_up">{{ ICON_MOVE_UP }}</a></span>
-						<span class="down-disabled" style="display:none;">{{ ICON_MOVE_DOWN_DISABLED }}</span>
-						<span class="down"><a href="{{ ba.U_MOVE_DOWN }}" data-ajax="row_down">{{ ICON_MOVE_DOWN }}</a></span>
-						<a href="{{ ba.U_EDIT }}">{{ ICON_EDIT }}</a> <a href="{{ ba.U_DELETE }}" data-ajax="row_delete">{{ ICON_DELETE }}</a>
-					</td>
-				</tr>
-			{% else %}
-				<tr>
-					<td colspan="8" style="text-align: center;">{{ lang('BOARD_ANNOUNCEMENTS_EMPTY') }}</td>
-				</tr>
-			{% endfor %}
-		</tbody>
-	</table>
-
-	<form id="acp_phpbb_ba_quick_add" method="post" action="{{ U_ACTION_ADD }}">
-		<fieldset class="quick">
-			<input class="button2" type="submit" value="{{ lang('BOARD_ANNOUNCEMENTS_ADD') }}">
-			{{ S_FORM_TOKEN }}
-		</fieldset>
-	</form>
-
+	{% include '@phpbb_boardannouncements/settings_list.html' %}
 {% endif %}
 
 {% include 'overall_footer.html' %}
