--- a/adm/style/board_announcements.html
+++ b/adm/style/board_announcements.html
@@ -2,7 +2,7 @@
 
 <a id="maincontent"></a>
 
-{% if S_ADD or S_EDIT %}
+{% if S_ADD_ANNOUNCEMENT %}
 	{% include '@phpbb_boardannouncements/settings_add_edit.html' %}
 {% else %}
 	{% include '@phpbb_boardannouncements/settings_list.html' %}
