Fix ACP style stuff
Signed-off-by: Matt Friedman <maf675@gmail.com>

--- a/adm/style/settings_add_edit.html
+++ b/adm/style/settings_add_edit.html
@@ -64,13 +64,13 @@
 		<dl>
 			<dt><label for="board_announcements_description">{{ lang('BOARD_ANNOUNCEMENTS_DESC') ~ lang('COLON') }}</label><br><span>{{ lang('BOARD_ANNOUNCEMENTS_DESC_EXPLAIN') }}</span></dt>
 			<dd>
-				<input name="board_announcements_description" type="text" id="board_announcements_description" maxlength="200" value="{{ BOARD_ANNOUNCEMENTS_DESC }}">
+				<input name="board_announcements_description" type="text" id="board_announcements_description" size="20" maxlength="200" value="{{ BOARD_ANNOUNCEMENTS_DESC }}">
 			</dd>
 		</dl>
 		<dl>
 			<dt><label for="board_announcements_expiry">{{ lang('BOARD_ANNOUNCEMENTS_EXPIRY') ~ lang('COLON') }}</label><br><span>{{ lang('BOARD_ANNOUNCEMENTS_EXPIRY_EXPLAIN') }}</span></dt>
 			<dd>
-				<input name="board_announcements_expiry" type="text" id="board_announcements_expiry" value="{{ BOARD_ANNOUNCEMENTS_EXPIRY }}" size="20" maxlength="20" placeholder="{{ "now"|date(constant('\\phpbb\\boardannouncements\\ext::DATE_FORMAT')) }}">
+				<input name="board_announcements_expiry" type="text" id="board_announcements_expiry" value="{{ BOARD_ANNOUNCEMENTS_EXPIRY }}" size="20" maxlength="25" placeholder="{{ "now"|date(constant('\\phpbb\\boardannouncements\\ext::DATE_FORMAT')) }}">
 			</dd>
 		</dl>
 		<dl>
