Add missing form keys and stuff
Signed-off-by: Matt Friedman <maf675@gmail.com>

--- a/adm/style/settings_add_edit.html
+++ b/adm/style/settings_add_edit.html
@@ -6,7 +6,7 @@
 <p>{{ lang('BOARD_ANNOUNCEMENTS_SETTINGS_EXPLAIN') }}</p>
 
 <script>
-	var form_name = 'acp_board_announcements';
+	var form_name = 'add_board_announcements';
 	var text_name = 'board_announcements_text';
 	var load_draft = false;
 	var upload = false;
@@ -20,7 +20,7 @@
 	</div>
 {% endif %}
 
-<form id="acp_board_announcements" method="post" action="{{ U_ACTION }}">
+<form id="add_board_announcements" method="post" action="{{ U_ACTION }}">
 	<fieldset>
 		<legend>{{ lang('BOARD_ANNOUNCEMENTS_OPTIONS') }}</legend>
 		<dl>
