--- a/adm/style/settings_list.html
+++ b/adm/style/settings_list.html
@@ -6,7 +6,7 @@
 
 <p>{{ lang('BOARD_ANNOUNCEMENTS_SETTINGS_EXPLAIN') }}</p>
 
-<form id="acp_phpbb_ba_settings" method="post" action="{{ U_ACTION }}" data-ajax="true">
+<form id="board_announcement_settings" method="post" action="{{ U_ACTION }}" data-ajax="true">
 	<fieldset>
 		<legend>{{ lang('GENERAL_OPTIONS') }}</legend>
 		<dl>
@@ -70,7 +70,7 @@
 	</tbody>
 </table>
 
-<form id="acp_phpbb_ba_quick_add" method="post" action="{{ U_ACTION_ADD }}">
+<form id="quick_add_board_announcements" method="post" action="{{ U_ACTION_ADD }}">
 	<fieldset class="quick">
 		<input class="button2" type="submit" value="{{ lang('BOARD_ANNOUNCEMENTS_ADD') }}">
 		{{ S_FORM_TOKEN }}
