--- a/adm/style/settings_list.html
+++ b/adm/style/settings_list.html
@@ -45,8 +45,8 @@
 				{% if ba.LOCATIONS is empty %}
 					{{ lang('BOARD_ANNOUNCEMENTS_EVERYWHERE') }}
 				{% else %}
-					{% set has_index = 'index' in ba.LOCATIONS %}
-					{% set has_forums = ba.LOCATIONS|filter(v => ba_is_numeric(v) and v > 0)|length > 0 %}
+					{% set has_index = -1 in ba.LOCATIONS %}
+					{% set has_forums = ba.LOCATIONS|filter(v => v > 0)|length > 0 %}
 					{% if has_index and has_forums %}
 						{{ lang('BOARD_ANNOUNCEMENTS_INDEX_PAGE') }}, {{ lang('BOARD_ANNOUNCEMENTS_FORUMS') }}
 					{% elseif has_index %}
